[package]
name = "interop-tests"
version = "0.1.0"
authors = [ "heartsucker <heartsucker@autistici.org>", "Erick Tryzelaar <etryzelaar@google.com>" ]
description = "TUF library interoperation tests"
homepage = "https://github.com/theupdateframework/rust-tuf"
repository = "https://github.com/theupdateframework/rust-tuf"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
publish = false

[dependencies]

[dev-dependencies]
assert_matches = "1.5.0"
futures-util = { version = "0.3.1", features = [ "io" ] }
pretty_assertions = "1"
tempfile = "3"

[[bin]]
name = "generate"
path = "src/generate.rs"
