[package]
name = "tuf"
edition = "2021"
version = "0.3.0-beta12"
authors = [ "heartsucker <heartsucker@autistici.org>", "Erick Tryzelaar <etryzelaar@google.com>" ]
description = "Library for The Update Framework (TUF)"
homepage = "https://github.com/theupdateframework/rust-tuf"
repository = "https://github.com/theupdateframework/rust-tuf"
documentation = "https://docs.rs/tuf"
readme = "README.md"
license = "MIT/Apache-2.0"
keywords = [ "security", "update", "repository" ]
categories = [ "cryptography" ]

[lib]
name = "tuf"
path = "./src/lib.rs"

[dependencies]

[dev-dependencies]
assert_matches = "1.5.0"
futures-executor = "0.3.1"
lazy_static = "1"
maplit = "1"
pretty_assertions = "1"

[features]
default = ["hyper", "hyper/tcp"]
